--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -2,7 +2,7 @@
 	<!-- ********************************************************************
 		$ HEADER
 	********************************************************************* -->
-	<div class="grid-container u-padding-top-15 u-padding-bottom-15">
+	<div class="grid-container u-padding-top-15 u-padding-bottom-15" {% if user %} style="padding-top: 10px; padding-bottom: 10px;" {% endif %}>
 		<div class="grid-100">
 			<header class="am-Header">
 				<figure class="am-Header-logo">
