--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -7,7 +7,7 @@
 		  <a href="/user/{{user.username}}/account/" class="single-tab selected" style="padding: 10px;">
 		    <p style="padding: 5px;">DATOS</p>
 		  </a>
-		  <a href="/user/{{user.username}}/account/password" style="padding: 10px;">
+		  <a href="/user/{{user.username}}/account/password" class="single-tab" style="padding: 10px;">
 		    <p style="padding: 5px;">PASSWORD</p>
 		  </a>
 		</div>
