--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -27,7 +27,7 @@
 						</div>
 						<div class="actions-box u-margin-bottom-20 after-like {% if !element.liked %} hide {% endif %}">
 
-							<i class="bi_interface-top arrow"></i>
+							<i class="bi_interface-top arrow" {% if owner %} style="left: 32px;" {% endif %}></i>
 
 							<a id="go-collection-modal" href="#collection-modal" >
 								<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
