--- a/app/views/errors/401.html
+++ b/app/views/errors/401.html
@@ -3,11 +3,9 @@
 {% block elements %}
 
 	<div class="private-view">
-		<div class="empty-box">
-			<div class="empty-box-column left">
-				<div class="plus-container">
-					<i class="bi_user-lock"></i>
-				</div>
+		<div class="empty-box" style="max-width: 1000px;">
+			<div class="empty-box-column padlock" style="background-image: url('/img/candadaso.png')">
+				<!-- <img src="/img/candadaso.png"> -->
 			</div>
 			<div class="empty-box-column right">
 
