--- a/app/views/user/work/edit.html
+++ b/app/views/user/work/edit.html
@@ -58,7 +58,7 @@
 						</div>
 					</label>
 				</div>
-				<button class="button u-margin-top-30 send" data-color="blue">SUBIR OBRA</button>
+				<button class="button u-margin-top-30 send" data-color="blue">GUARDAR</button>
 				<div class="hide send-loading">
 					<button class="button u-margin-top-30" data-color="blue">
 						<i class="load fa fa-spinner"></i>
