add stats to profile

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -90,6 +90,27 @@
 				{% if profile.dribble %} <a href="{{profile.dribble}}"><i class="fa fa-dribble"></i></a> {% endif %}
 			</div>
 		</div>
+		<div class="grid-40 u-margin-top-20">
+
+			<!-- <p class="am-stats-text" style="font-size: 21px; color: #333;">Estadisticas</p> -->
+			<p class="am-stats-text">Estadisticas</p>
+			<div class="u-separator"></div>
+			<div class="u-center">
+				<!-- <table class="am-Single-stats u-margin-top-10" style="font-size: 13.2px;"> -->
+				<table class="am-Single-stats u-margin-top-10">
+				  <tr>
+				    <td><i class="bi_interface-view"></i></td>
+				    <td><p>VISTAS</p></td>
+				    <td><span>2342</span></td>
+				  </tr>
+				  <tr>
+				    <td><i class="bi_ecommerce-diamon"></i></td>
+				    <td><p>VALORACIONES</p></td>
+				    <td><span class="likes">242</span></td>
+				  </tr>
+				</table>
+			</div>
+		</div>
 		<div class="grid-100">
 			<p class="profile-title u-margin-top-30">
 				<span>Mis últimos trabajos</span>
