add share facebook

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -290,9 +290,21 @@
 			</div>
 		</div>
 	</div>
+	<div id="fb-root"></div>
 {% endblock %}
 
 {% block scripts %}
+	<script>
+	(function (d, s, id) {
+	    var js;
+	    var fjs = d.getElementsByTagName(s)[0];
+	    if (d.getElementById(id)) return;
+	    js = d.createElement(s);
+	    js.id = id;
+	    js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=1473636902857068";
+	    fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+	</script>
 	<script>
 		var owner = {{owner|json|safe}};
 		var entity = {{entity|json|safe}};
