--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -97,49 +97,49 @@
 		<div class="grid-100 grid-parent">
 			<div class="categories">
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/1 pintura.png');">
+					<a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('img/categories/1 pintura.png');">
 						<div class="cover"></div>
 						<p>pintura</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');">
+					<a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');">
 						<div class="cover"></div>
 						<p>arte</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/3 dibujo.png');">
+					<a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('img/categories/3 dibujo.png');">
 						<div class="cover"></div>
 						<p>dibujo</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/4 digital.png');">
+					<a href="/works/category/digital/page-1" class="categorie" style="background-image: url('img/categories/4 digital.png');">
 						<div class="cover"></div>
 						<p>digital</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/5 collage.png');">
+					<a href="/works/category/collage/page-1" class="categorie" style="background-image: url('img/categories/5 collage.png');">
 						<div class="cover"></div>
 						<p>collage</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/6 collage.png');">
+					<a href="/works/category/escultura/page-1" class="categorie" style="background-image: url('img/categories/6 collage.png');">
 						<div class="cover"></div>
 						<p>escultura</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/7 collage.png');">
+					<a href="/works/category/fotografia/page-1" class="categorie" style="background-image: url('img/categories/7 collage.png');">
 						<div class="cover"></div>
 						<p>fotogragia</p>
 					</a>
 				</div>
 				<div class="categorie-container">
-					<a href="#" class="categorie" style="background-image: url('img/categories/8 collage.png');">
+					<a href="/works/category/ilustracion/page-1" class="categorie" style="background-image: url('img/categories/8 collage.png');">
 						<div class="cover"></div>
 						<p>ilustracion</p>
 					</a>
