--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -685,33 +685,33 @@ body
 	// border-radius 3px
 	// cursor pointer
 
-// .delete
-// 	position absolute
-// 	bottom 10px
-// 	right 5px
-// 	color white
-// 	// background rgba(black, .5)
-// 	cursor pointer
+.delete
+	position absolute
+	bottom 10px
+	right 5px
+	color white
+	// background rgba(black, .5)
+	cursor pointer
 
-// .confirm
-// 	position absolute
-// 	bottom 5px
-// 	right 5px
-// 	color white
-// 	background rgba(black, .5)
-// 	border-radius 4px
-// 	padding 5px
-// 	font-family 'Montserrat', sans-serif
-// 	span
-// 		font-size 11px
+.confirm
+	position absolute
+	bottom 5px
+	right 5px
+	color white
+	background rgba(black, .5)
+	border-radius 4px
+	padding 5px
+	font-family 'Montserrat', sans-serif
+	span
+		font-size 11px
 
-// .edit
-// 	font-size 1.15em
-// 	position absolute
-// 	top 10px
-// 	right 5px
-// 	color white
-// 	cursor pointer
+.edit
+	font-size 1.15em
+	position absolute
+	top 10px
+	right 5px
+	color white
+	cursor pointer
 
 .private
 	z-index: 1;
@@ -2985,14 +2985,23 @@ body
 
 .empty-box
 	border-radius 4px
-	border solid 1px #9b9b9b
-	max-width 750px
+	// border solid 1px #9b9b9b
+	// max-width 750px
+	max-width 500px
 	margin auto
 	text-align center
 	display flex
 	&-column
 		>i
-			font-size 4em
+			border: solid 2px black;
+			border-radius: 50%;
+			height: 65px;
+			width: 65px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 1.6em;
+			margin: auto;
 	&-column.left
 		flex 1
 		background #9b9b9b
@@ -3056,9 +3065,16 @@ body
 		align-items: center;
 		i
 			// font-size 1.5em
-			font-size 2.5em
+			// font-size 2.5em
 			// color #000
 			color white
+			border solid 1px white
+			height 28px
+			width 28px
+			border-radius 50%
+			&::before
+				margin-right: 0;
+
 
 @media (min-width: 800px)
 	.empty-box
@@ -3072,3 +3088,8 @@ body
 	.empty-box
 		background white
 		border none
+
+
+[class^="bi_"]:before, [class*=" bi_"]:before {
+	margin-right: 0;
+}
