--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -2,8 +2,8 @@
   <div class="grid-item">
     <div class="work-card">
       <% if(!public) { %>
-        {# <div class="lock"><i class="bi_user-lock"></i></div> #}
-        <div class="private">PRIVADO</div>
+        <div class="lock"><i class="bi_user-lock"></i></div>
+        {# <div class="private">PRIVADO</div> #}
       <% } %>
       <% if (viewer && viewer.isAdmin) { %>
         <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
@@ -14,7 +14,7 @@
       <% } %>
 
       <% if (viewer && viewer.isAdmin) { %>
-        {# <div class="delete"><i class="bi_editorial-trash-a-l"></i></div> #}
+        <div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
 
         <div class="confirm delete-confirm hide">
           <% if (context && context === 'single-collection') { %>
@@ -28,7 +28,7 @@
       <% } %>
 
       <% if (owner) { %>
-        {# <div class="edit"><i class="bi_editorial-compose"></i></div> #}
+        <div class="edit"><i class="bi_editorial-compose"></i></div>
 
         {# <div class="cover-work work-options">
           <div class="inner">
@@ -45,7 +45,7 @@
           </div>
         </div> #}
 
-        <div class="cover-work confirm delete-confirm hide">
+        {# <div class="cover-work confirm delete-confirm hide">
           <div class="inner">
             <p class="title">¿ELIMINAR ESTA OBRA?</p>
             <div class="options">
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> #}
 
       <% } %>
 
