add links to empty boxes in profile

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3022,11 +3022,11 @@ body
 			border-radius: 50%;
 			height: 65px;
 			width: 65px;
+			margin: auto;
+			font-size: 1.6em;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			font-size: 1.6em;
-			margin: auto;
 	&-column.left
 		flex 1
 		background #9b9b9b
@@ -3089,14 +3089,14 @@ body
 		display: inline-flex;
 		align-items: center;
 		i
-			// font-size 1.5em
-			// font-size 2.5em
-			// color #000
 			color white
 			border solid 1px white
 			height 28px
 			width 28px
 			border-radius 50%
+			display flex
+			align-items center
+			justify-content center
 			&::before
 				margin-right: 0;
 
@@ -3115,6 +3115,6 @@ body
 		border none
 
 
-[class^="bi_"]:before, [class*=" bi_"]:before {
-	margin-right: 0;
-}
+// [class^="bi_"]:before, [class*=" bi_"]:before {
+// 	margin-right: 0;
+// }
